MDEV-6993 Bad results with join comparing DECIMAL and ENUM/SET columns